--- a/04/14.html
+++ b/04/14.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div  class="test2" onclick="t();" style="width: 300px; height: 300px;">
+    <div  class="test2" onclick="t();" style="width: 300px; height: 300px; border-bottom:1px solid black;">
 
     </div>
   </body>
@@ -34,7 +34,7 @@
 
    div.style.width =   parseInt(div.style.width)+5+'px';
    div.style.height =   parseInt(div.style.height)+5+'px';
-
+   div.style.borderBottomWidth =  parseInt(div.style.borderBottomWidth)+1+'px';
     }
 
   </script>
