--- a/04/19.html
+++ b/04/19.html
@@ -14,7 +14,7 @@
         var sel = document.getElementById('prov');
         for (var i = 0,len = arry[sel.value].length; i < len; i++) {
             opt = opt + '<option value="' + i + '">' + arry[sel.value][i] + '</option>'
-        }//字符串拼接是重点。
+        }//字符串拼接是重点
 
         document.getElementById('city').innerHTML = opt;
 
