文件上传初步

--- a/07/167/167_1.html
+++ b/07/167/167_1.html
@@ -5,7 +5,7 @@
     <title>文件上传</title>
   </head>
   <body>
-    <form class="" action="02.php" method="post">
+    <form class="" action="02.php" method="post" enctype='multipart/form-data'>
       用户名：<input type="text" name="username" value=""><br />
       头像 ：<input type="file" name="pic" value=""><br />
       <input type="submit" value="提交">
