中文验证码

--- a/07/174_1.html
+++ b/07/174_1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="zh-CN">
 <head>
 <title>新建网页</title>
@@ -16,7 +16,7 @@ function chv(vcode) {
 </style>
 </head>
     <body>
-        
+
 
         <p>
         验证码:<input type="text" name="vcode" /><img src="174_1.php" onclick="chv(this);" />
